<resources>
    <string name="app_name">Simple Kotlin Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_coffe">Coffe</string>
    <string name="menu_intent">Intent</string>

    <string name="guan">Guan</string>
    <string name="guan_gmail">guanshiyinnn@gmail.com</string>
    <string name="menu_chart">Cart</string>
    <string name="menu_social">Social Media</string>
    <string name="menu_hotel">Hotel</string>
    <string name="menu_subway">Subway</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="project">Project</string>
    <string name="github">GitHub</string>
    <string name="instagram">Instagram</string>
    <string name="x_twitter">X / Twitter</string>
    <string name="email">Email</string>
    <string name="object_received">Object Received</string>
    <string name="move_activity_with_object">Pindah Activity dengan Object</string>
    <string name="title">Restaurant Review</string>
    <string name="description">Restaurant Review</string>
    <string name="review">Restaurant Review</string>
    <string name="write_your_review">Restaurant Review</string>
    <string name="send">Restaurant Review</string>


</resources>