<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
    </group>

    <item android:title="@string/project">
        <menu>
            <item
                android:id="@+id/nav_coffe"
                android:icon="@drawable/ic_coffe"
                android:title="@string/menu_coffe" />
            <item
                android:id="@+id/btn_move_activity_with_object"
                android:icon="@drawable/ic_intent"
                android:title="@string/menu_intent"/>
        </menu>
    </item>

    <item android:title="@string/menu_social">
        <menu>
            <item
                android:id="@+id/nav_github"
                android:icon="@drawable/ic_github"
                android:title="@string/github"/>
            <item
                android:id="@+id/nav_instagram"
                android:icon="@drawable/ic_instagram"
                android:title="@string/instagram"/>
            <item
                android:id="@+id/nav_x"
                android:icon="@drawable/ic_x"
                android:title="@string/x_twitter"/>
            <item
                android:id="@+id/nav_email"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/email"/>
        </menu>
    </item>
</menu>