<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.yansha.simplekotlinproject.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_coffe"
        android:name="com.yansha.simplekotlinproject.ui.restaurant.RestaurantFragment"
        android:label="@string/menu_coffe"
        tools:layout="@layout/restaurant_main" />

    <activity
        android:id="@+id/activity_move_activity_with_object"
        android:name="com.yansha.simplekotlinproject.ui.intent.MoveActivityWithObject"
        android:label="@string/menu_intent"
        tools:layout="@layout/activity_move_with_object" />
</navigation>